[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/BaseOD.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/TebengeMenuBackButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/BoolDT.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/SettingOD.gd" type="Script" id=4]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Assets/audio/sounds/PauseCrazy.wav" type="AudioStream" id=5]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/TebengeSFXSpeaker.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/TebengeMenuButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Assets/images/readmeIcon.png" type="Texture" id=8]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Assets/images/cloudGameIcon.png" type="Texture" id=9]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Assets/images/updateCheckIcon.png" type="Texture" id=10]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Assets/images/soundSpeakerIcon.png" type="Texture" id=11]

[node name="SettingOD" instance=ExtResource( 1 )]
script = ExtResource( 4 )
startQueryFromSelectionNum = 1

[node name="SoundOnOffDT" parent="." index="0" instance=ExtResource( 3 )]
margin_left = 202.0
margin_right = 502.0
margin_bottom = 150.0
title = "Sound (Master)"
icon = ExtResource( 11 )

[node name="GooglePlayGamesButton" parent="." index="1" instance=ExtResource( 7 )]
margin_left = 506.0
margin_right = 806.0
margin_bottom = 150.0
hint_tooltip = "Opens your Google Play profile dashboard"
text = "Google Play Games"
icon = ExtResource( 9 )

[node name="TebengeMenuButton" parent="." index="2" instance=ExtResource( 7 )]
margin_left = 810.0
margin_right = 1110.0
margin_bottom = 150.0
text = "Check Update"
icon = ExtResource( 10 )

[node name="AboutButton" parent="." index="3" instance=ExtResource( 7 )]
margin_left = 1114.0
margin_right = 1414.0
margin_bottom = 150.0
text = "About"
icon = ExtResource( 8 )

[node name="BackButton" parent="." index="4" instance=ExtResource( 2 )]
margin_left = 1418.0
margin_right = 1718.0
margin_bottom = 150.0

[node name="TestSpeaker" parent="." index="5" instance=ExtResource( 6 )]
stream = ExtResource( 5 )

[connection signal="changeState" from="SoundOnOffDT" to="." method="_on_SoundOnOffDT_changeState"]
